--- a/websitewownet.html
+++ b/websitewownet.html
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-    <div class="design">
+    <div class="design bg-black">
         <div class="color-white container">
             <div class="row">
                 <div class="col-lg-5 col-12 pe-md-5 pe-0 text-lg-end text-start">
@@ -150,6 +150,227 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class=" bg-black row">
+        <div class="col-md-6 col-12"><img src="./assets/img/bot-img.jpg" alt="Blockchain" class="img-fluid"></div>
+        <div class="col-md color-white align-self-center mx-3 my-5 w-auto"> <span> Công nghệ mới</span> 
+            <span class="blockchain">
+                <span class="color-wow-orange">  AI</span> <span class="color-white"> - </span><span class="color-wow-blue">Blockchain</span>
+            </span>
+        </div>
+    </div>
+    <div class="bg-black">
+        <div class="container">
+            <div class="bg-wownet p-md-5 p-4 mt-md-5 mt-0">
+                <div class="text-wownet color-white">
+                    Hệ thống <span class="text-wownet-big color-wow-orange"> WOWNET</span>
+                </div>
+                <div>
+                    Hướng tới công nghệ đổi mới và quản lý bền vững
+                </div>
+            </div>
+            <div class="mobile-wowlogo color-white">
+                <div class="col-md-6 col-12">
+                    <img src="./assets/img/phone.png" alt="phone wownet">
+                </div>
+                <div class="col-md-6 col-12">
+                    <img src="./assets/img/three-logo.png" alt=" logo wownet">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg-black">
+        <div class="container content-wownet color-white">
+            <div class="item1">
+                Chúng tôi đã <span class="buil color-wow-blue">xây dựng </span>1 hệ thống quản lý bán hàng online. Hệ thống Wownet được nhiều khách lớn tin tưởng sử dụng.
+            </div>
+            <div class="item2">
+                <img src="./assets/img/upstair.png" alt="phone wownet">
+            </div>
+            <div class="item3">
+                Đây là một giải pháp tối ưu, được thiết kế chuyên biệt để phục vụ nhu cầu của các công ty phân phối hoạt động trong lĩnh vực tiếp thị đa cấp, bán hàng tận nhà và bán hàng theo mô hình tài trợ.
+            </div>
+        </div>
+    </div>
+    <div class="bg-black">
+        <div class="container">
+            <div class="why text-center">
+                <p class="text-first color-white">
+                    Tại <span class="color-wow-orange">sao</span> nên chọn <span class="why-big-text color-wow-blue">WOWNET?</span>
+                </p>
+                <p class="color-white">WOWNET tích hợp nhiều tính năng ưu việt, hỗ trợ bạn quản lý mọi khía cạnh của doanh nghiệp.</p>
+            </div>
+        </div>
+    </div>
+    <div class="bg-black">
+        <div class="container color-white">
+            <!-- 01 -->
+            <div class="row">
+                <div class="num-ask color-wow-blue ">01<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask color-wow-blue">
+                    Quản Lý Thành Viên
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Theo dõi thông tin thành viên chi tiết, phân cấp mạng lưới đa tầng.</li>
+                      <li>Báo cáo hiệu suất và doanh số từng thành viên chuyên nghiệp.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 02 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">02<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Quản Lý Sản Phẩm
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Dễ dàng tạo, cập nhật và quản lý thông tin sản phẩm.</li>
+                      <li>Đồng bộ dữ liệu để đảm bảo tính chính xác.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 03 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">03<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Quản lý giá bán
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Linh hoạt điều chỉnh giá dựa trên cấp bậc hoặc chính sách.</li>
+                      <li>Hỗ trợ các chương trình khuyến mãi và tối ưu hóa lợi nhuận.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 04 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">04<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Quản lý kho
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Theo dõi tồn kho theo thời gian thực, cảnh báo khi sắp hết hàng.</li>
+                      <li>Tích hợp tính năng nhập - xuất kho, tối ưu chuỗi cung ứng.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 05 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">05<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Quản lý khuyến mãi
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Vận hành các chương trình giảm giá.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 06 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">06<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Quản lý hoạt động
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Theo dõi hoạt động các quản trị viên khi dùng hệ thống.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 07 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">07<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Quản lý tiền thưởng
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Tạo và hỗ trợ vận hành tính toán tiền thưởng.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 08 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">08<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Lợi ích
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Dễ dàng tạo, cập nhật và quản lý thông tin.</li><li>
+                        Đồng bộ dữ liệu để đảm bảo tính chính xác.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 09 -->
+            <div class="row mt-sm-5 mt-2">
+                <div class="num-ask color-wow-blue ">09<span class="color-wow-orange">.</span></div>
+            </div>
+            <div class="row py-0 mt-sm-5">
+                <div class="col-md-5 col-12 con-ask">
+                    Đối tượng sử dụng
+                </div>
+                <div class="col-md-7 col-12 con-answer">
+                    <ul class="style-dot">
+                      <li>Các doanh nghiệp đã đang và sắp hướng tới thương mại điện tử và tiếp thị đa tầng.</li><li>
+                        Phù hợp để quản lý đội ngũ lớn và phát triển mạng lưới kinh doanh.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg-black">
+        <div class="container color-white">
+            <div class="row">
+                <div class="office-left text-center">
+                    <div class="small-my-office">
+                        Tính năng
+                    </div>
+                    <div class="my-office color-wow-orange">My Officce</div>
+                    <img src="./assets/img/wow-net.gif" alt="">
+                </div>
+                <div class="office-right text-left ps-md-5 ps-0">
+                    Song song với hệ thống WOWNET, chúng tôi tích hợp các chức năng tương tự trong my office trên website của bạn. Nên
+                    website hoàn toàn thuận tiện cho bạn quản lý sản phẩm và doanh thu, thanh toán dễ dàng.
+                    <div class="mt-5">
+                        Các tính năng trong My Office:
+                    </div>
+                    <ul class="style-dot">
+                        <li>Quản lý hoa hồng.</li>
+                        <li>Quản lý đặt hàng.</li>
+                        <li>Quản lý cửa hàng.</li>
+                        <li>Sản phẩm quan tâm.</li>
+                        <li>Thanh toán thuận lợi</li>
+                        <li>...</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Sidebar Helper -->
+    <div class="sidebar-helper goTop">
+        <div href="#" class="sidebar-item">
+            <img src="./assets/img/wowcns-vn-letter-o.png" alt="">
         </div>
     </div>
     <!------------- Footer ------------->
