--- a/api.html
+++ b/api.html
@@ -8,7 +8,7 @@
         content="WowCNS VIETNAM giúp công ty khách hàng tạo ra nhiều giải pháp và phầm mềm, và giải pháp thương mai điện tử, phần mềm hỗ trợ trí tuệ nhân tạo, đáp ứng với nhu cầu phát triển của công ty, tạo mô hình kinh doanh đa tầng, kiểm tra quản lý doanh thu trong hệ thống kinh doanh đa tầng.">
     <meta name="keyword" content="WowCNS VIETNAM cong ty phan mem, cong nghe thong tin, AI, Blockchain">
     <meta name="title" content="Giải pháp phần mềm, Kinh Doanh mô hình đa tầng">
-    <title>WOWSNS VIETNAM</title>
+    <title>WOWCNS VIETNAM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="shortcut icon" href="./assets/img/favicon.ico">
@@ -223,6 +223,11 @@
                         </a>
                     </li>
                     <li class="menu-item">
+                        <a href="#">
+                            <div>SỬ DỤNG HỆ THỐNG</div>
+                        </a>
+                    </li>
+                    <li class="menu-item">
                         <a href="lienhe.html">
                             <div>LIÊN HỆ</div>
                         </a>
@@ -273,8 +278,8 @@
                                     <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#tab2">Example</a></li>
                                 </ul>
                                 <div class="tab-content">
-                                    <div id="tab1" class="tab-pane fade show py-4">Request parameters
-                                        <div class="mt-5">
+                                    <div id="tab1" class="tab-pane fade show py-4 ">Request parameters
+                                        <div class="mt-5 overflow-auto">
                                             <table class="table table-striped table-dark">
                                                 <thead>
                                                   <tr>
@@ -292,7 +297,7 @@
                                               </table>
                                         </div>
                                         <div class="tab-pane fade show py-4"> Response parameters                                            
-                                            <div class="mt-5">
+                                            <div class="mt-5 overflow-auto">
                                                 <div id="responeArr"></div>
                                                 <table class="table table-striped table-dark">
                                                     <thead>
@@ -477,6 +482,7 @@
                     <div class=""><a href="dichvu.html">DỊCH VỤ</a></div>
                     <div class=""><a href="websitewownet.html">WEBSITE & WOWNET </a></div>
                     <div class="active"><a href="api.html">API DOCUMENT</a></div>
+                    <div class=""><a href="#">SỬ DỤNG HỆ THỐNG</a></div>
                     <div class=""><a href="lienhe.html">LIÊN HỆ</a></div>
                 </div>
             </div>
