--- a/white-version/gioithieu.html
+++ b/white-version/gioithieu.html
@@ -7,7 +7,7 @@
     <meta name="description" content="WowCNS VIETNAM giúp công ty khách hàng tạo ra nhiều giải pháp và phầm mềm, và giải pháp thương mai điện tử, phần mềm hỗ trợ trí tuệ nhân tạo, đáp ứng với nhu cầu phát triển của công ty, tạo mô hình kinh doanh đa tầng, kiểm tra quản lý doanh thu trong hệ thống kinh doanh đa tầng.">
     <meta name="keyword" content="WowCNS VIETNAM cong ty phan mem, cong nghe thong tin, AI, Blockchain">
     <meta name="title" content="Giải pháp phần mềm, Kinh Doanh mô hình đa tầng">
-    <title>WOWSNS VIETNAM</title>
+    <title>WOWCNS VIETNAM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="shortcut icon" href="./assets/img/favicon.ico">
