--- a/api.html
+++ b/api.html
@@ -112,12 +112,12 @@
             let tbodyRequest = '';
             for (var i = 0; i < data.length; i++) {
                 tbodyRequest += '<tr>';
-                tbodyRequest += `  <th scope="row">${i + 1}</th>`;
-                tbodyRequest += `  <th>${data[i].name}</th>`;
-                tbodyRequest += `  <th>${data[i].type}</th>`;
-                tbodyRequest += `  <th>${data[i].length}</th>`;
-                tbodyRequest += `  <th>${data[i].required}</th>`;
-                tbodyRequest += `  <th>${data[i].remarks}</th>`;
+                tbodyRequest += `  <td scope="row">${i + 1}</td>`;
+                tbodyRequest += `  <td>${data[i].name}</td>`;
+                tbodyRequest += `  <td>${data[i].type}</td>`;
+                tbodyRequest += `  <td>${data[i].length}</td>`;
+                tbodyRequest += `  <td>${data[i].required}</td>`;
+                tbodyRequest += `  <td>${data[i].remarks}</td>`;
                 tbodyRequest += '</tr>';
             }
             $("#tbodyRequest").html(tbodyRequest);
@@ -127,10 +127,10 @@
             let tbodyResponse = '';
             for (var i = 0; i < data.length; i++) {
                 tbodyResponse += '<tr>';
-                tbodyResponse += `  <th scope="row">${i + 1}</th>`;
-                tbodyResponse += `  <th>${data[i].name}</th>`;
-                tbodyResponse += `  <th>${data[i].type}</th>`;
-                tbodyResponse += `  <th>${data[i].remarks}</th>`;
+                tbodyResponse += `  <td scope="row">${i + 1}</td>`;
+                tbodyResponse += `  <td>${data[i].name}</td>`;
+                tbodyResponse += `  <td>${data[i].type}</td>`;
+                tbodyResponse += `  <td>${data[i].remarks}</td>`;
                 tbodyResponse += '</tr>';
             }
             $("#tbodyResponse").html(tbodyResponse);
@@ -142,10 +142,10 @@
             if (data != 'null') {
                 for (var i = 0; i < data.length; i++) {
                     tbodyResponseFail += '<tr>';
-                    tbodyResponseFail += `  <th scope="row">${i + 1}</th>`;
-                    tbodyResponseFail += `  <th>${data[i].name}</th>`;
-                    tbodyResponseFail += `  <th>${data[i].type}</th>`;
-                    tbodyResponseFail += `  <th>${data[i].remarks}</th>`;
+                    tbodyResponseFail += `  <td scope="row">${i + 1}</td>`;
+                    tbodyResponseFail += `  <td>${data[i].name}</td>`;
+                    tbodyResponseFail += `  <td>${data[i].type}</td>`;
+                    tbodyResponseFail += `  <td>${data[i].remarks}</td>`;
                     tbodyResponseFail += '</tr>';
                 }
                 $("#tbodyResponseFail").html(tbodyResponseFail);
@@ -223,11 +223,6 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">
-                            <div>SỬ DỤNG HỆ THỐNG</div>
-                        </a>
-                    </li>
-                    <li class="menu-item">
                         <a href="lienhe.html">
                             <div>LIÊN HỆ</div>
                         </a>
@@ -278,8 +273,8 @@
                                     <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#tab2">Example</a></li>
                                 </ul>
                                 <div class="tab-content">
-                                    <div id="tab1" class="tab-pane fade show py-4 ">Request parameters
-                                        <div class="mt-5 overflow-auto">
+                                    <div id="tab1" class="tab-pane fade show py-4">Request parameters
+                                        <div class="mt-5">
                                             <table class="table table-striped table-dark">
                                                 <thead>
                                                   <tr>
@@ -297,7 +292,7 @@
                                               </table>
                                         </div>
                                         <div class="tab-pane fade show py-4"> Response parameters                                            
-                                            <div class="mt-5 overflow-auto">
+                                            <div class="mt-5">
                                                 <div id="responeArr"></div>
                                                 <table class="table table-striped table-dark">
                                                     <thead>
